--- a/dt.html
+++ b/dt.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="box" onclick="revealMessage()">
-        <div class="hidden-message" id="message">You are DUMB</div>
+        <div class="hidden-message" id="message">You are soo good aluu</div>
     </div>
 
     <script>
@@ -50,3 +50,4 @@
     </script>
 </body>
 </html>
+
